Feb 1st 2018:
 -removed pls cookie and pls award