@@ -29,8 +29,7 @@
     "dank",
     "memes",
     "memer",
-    "bot",
-    "discord.js"
+    "bot"
   ],
   "author": "Melmsie",
   "license": "AGPL-3.0",
