@@ -5,12 +5,11 @@ exports.run = async function (Memer, msg, args) {
       embed: {
         color: Memer.colors.purple,
         title: 'Available Commands',
-        description: 'The developer is streaming every day 5pm-10pm EST, come say hi: https://www.twitch.tv/m3lmsie',
+        description: 'Try pls roast for roasting people, and pls report for reporting people for no reason.',
         fields: [
-          { name: `${funemoji} Fun Commands`, value: 'agree, asktrump, award, boo, call, cookie, dankrate, fart, greentext, henlo, joke, justright, kill, meme, memegen, mock, pupper, kitty, pun, porn, say, shitpost, spin' },
-          { name: '📷 Image Manipulation', value: 'ban, batslap, brazzers, byemom, cancer, dank, delete, hitler, invert, jail, magik, pride, rip, salty, search, shit, spank, trigger, warp' },
-          { name: '🔧 Utilities and Information', value: 'clean, credits, disable, enable, feedback, help, invite, patreon, ping, prefix, stats, watch' },
-          { name: '🖼 Image Tags', value: 'alone, doge, dolan, godno, kappa, lenny, lul, megusta, notsure, pepe, troll, wat ' }
+          { name: `${funemoji} Fun Commands`, value: 'asktrump, award, boo, dankrate, fart, greentext, joke, justright, kill, meme, memegen, mock, pupper, kitty, pun, porn, roast, say, shitpost' },
+          { name: '📷 Image Manipulation', value: 'ban, batslap, brazzers, byemom, cancer,delete, hitler, jail, magik, pride, rip, salty, search, shit, spank, trigger, warp' },
+          { name: '🔧 Utilities and Information', value: 'clean, credits, disable, enable, help, invite, patreon, prefix, stats' }
         ],
         footer: { text: 'New commands coming in Feb!' }
       }
