@@ -25,12 +25,9 @@ exports.handleMeDaddy = async function (Memer, msg, gConfig) {
     return
   }
 
-  Memer.metrics.increment(`command-${command.props.name}`)
-
   const cooldown = await Memer.db.getCooldown(command.props.name, msg.author.id)
   if (cooldown > Date.now()) {
     const waitTime = (cooldown - Date.now()) / 1000
-    Memer.metrics.increment('ratelimitedNoobs')
     return msg.channel.createMessage(`u got 2 wait ${waitTime > 60 ? Memer.parseTime(waitTime) : `${waitTime.toFixed()} secunds`}!!!1!`)
   }
   await Memer.db.addCooldown(command.props.name, msg.author.id)
@@ -41,10 +38,8 @@ exports.handleMeDaddy = async function (Memer, msg, gConfig) {
       return
     }
     msg.reply = (str) => { msg.channel.createMessage(`${msg.author.mention}, ${str}`) }
-    Memer.metrics.increment('commandsTotal')
     await command.run(Memer, msg, args)
   } catch (e) {
-    Memer.metrics.increment('erroredCommands')
     msg.channel.createMessage(`Something went wrong while executing this hecking command: \`${e.message}\` \nPlease join here (https://discord.gg/ebUqc7F) if the issue persists.`) // meme-ier format?
     return Memer.log(`Command error:\n\tCommand: ${command.props.name}\n\tSupplied arguments: ${args.join(', ')}\n\tError: ${e.stack}`, 'error')
   }
