@@ -16,13 +16,6 @@ class Memer extends Base {
     this.cmds = new Map()
     this.aliases = new Map()
     this.tags = new Map()
-    this.metrics = require('datadog-metrics')
-    this.metrics.init({
-      apiKey: this.config.datadog.APIkey,
-      appKey: this.config.datadog.APPkey,
-      flushIntervalSeconds: 10,
-      prefix: 'dank.'
-    })
     this.indexes = {
       'meme': {},
       'joke': {},
@@ -79,7 +72,6 @@ class Memer extends Base {
   }
 
   guildCreate (guild) {
-    this.metrics.increment('guildCreate')
     const embed = {
       color: this.colors.lightblue,
       title: 'Hello!',
@@ -90,7 +82,6 @@ class Memer extends Base {
   }
 
   guildDelete (guild) {
-    this.metrics.increment('guildDelete')
     this.db.deleteGuild(guild.id)
   }
 
@@ -106,7 +97,6 @@ class Memer extends Base {
   }
 
   async messageCreate (msg) {
-    this.metrics.increment('messagesSeen')
     if (!msg.channel.guild ||
         msg.author.bot ||
         await this.db.isBlocked(msg.author.id, msg.channel.guild.id)) {
