@@ -44,26 +44,22 @@ module.exports = Bot => ({
         disabledCommands: []
       })
       .run()
-    Bot.metrics.increment('db.createGuild')
     return this.getGuild(guildID)
   },
 
   getGuild: async function getGuild (guildID) {
-    Bot.metrics.increment('db.getGuild')
     return Bot.r.table('guilds')
       .get(guildID)
       .run()
   },
 
   updateGuild: async function updateGuild (guildEntry) {
-    Bot.metrics.increment('db.updateGuild')
     return Bot.r.table('guilds')
       .insert(guildEntry, { conflict: 'update' })
       .run()
   },
 
   deleteGuild: async function deleteGuild (guildID) {
-    Bot.metrics.increment('db.deleteGuild')
     return Bot.r.table('guilds')
       .get(guildID)
       .delete()
@@ -71,7 +67,6 @@ module.exports = Bot => ({
   },
 
   addCooldown: async function addCooldown (command, ownerID) {
-    Bot.metrics.increment('db.addCooldown')
     if (!Bot.cmds.has(command)) {
       return
     }
@@ -94,7 +89,6 @@ module.exports = Bot => ({
   },
 
   createCooldowns: async function createCooldowns (command, ownerID) {
-    Bot.metrics.increment('db.createCooldown')
     if (!Bot.cmds.has(command)) {
       return
     }
@@ -104,14 +98,12 @@ module.exports = Bot => ({
   },
 
   getCooldowns: async function getCooldown (ownerID) {
-    Bot.metrics.increment('db.getCooldown')
     return Bot.r.table('cooldowns')
       .get(ownerID)
       .run()
   },
 
   getCooldown: async function getCooldown (command, ownerID) {
-    Bot.metrics.increment('db.getCooldown')
     const profile = await Bot.r.table('cooldowns').get(ownerID).run()
     if (!profile) {
       return 1
@@ -124,14 +116,12 @@ module.exports = Bot => ({
   },
 
   addBlock: async function addBlock (id) {
-    Bot.metrics.increment('db.addBlock')
     return Bot.r.table('blocked')
       .insert({ id })
       .run()
   },
 
   removeBlock: async function removeBlock (id) {
-    Bot.metrics.increment('db.removeBlock')
     return Bot.r.table('blocked')
       .get(id)
       .delete()
@@ -139,7 +129,6 @@ module.exports = Bot => ({
   },
 
   isBlocked: async function isBlocked (guildID, authorID = 1) {
-    Bot.metrics.increment('db.checkBlock')
     const res = await Bot.r.table('blocked').get(guildID).run() ||
                 await Bot.r.table('blocked').get(authorID).run()
 
@@ -147,14 +136,12 @@ module.exports = Bot => ({
   },
 
   addDonator: async function addDonator (id, donatorLevel) {
-    Bot.metrics.increment('db.addDonor')
     return Bot.r.table('donators')
       .insert({ id, donatorLevel })
       .run()
   },
 
   removeDonator: async function removeDonator (id) {
-    Bot.metrics.increment('db.removeDonor')
     return Bot.r.table('donators')
       .get(id)
       .delete()
@@ -162,7 +149,6 @@ module.exports = Bot => ({
   },
 
   isDonator: async function isDonator (id, donatorLevel = 1) {
-    Bot.metrics.increment('db.checkDonor')
     const res = await Bot.r.table('donators')
       .get(id)
       .run()
@@ -170,7 +156,6 @@ module.exports = Bot => ({
   },
 
   getStats: async function getStats () {
-    Bot.metrics.increment('db.getStats')
     const res = await Bot.r.table('stats')
       .get(1)
       .run()
